--- a/ASP .NET Core Client/eClinic/eClinic.csproj
+++ b/ASP .NET Core Client/eClinic/eClinic.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="wwwroot\img\doctors.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="wwwroot\img\doctors.jpg" />
+  </ItemGroup>
 </Project>
