--- a/ASP .NET Core Client/eClinic/appsettings.json
+++ b/ASP .NET Core Client/eClinic/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=10.0.75.1;Database=Clinic;User Id=sa;Password=Qwerty123!;ConnectRetryCount=0"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
